# pgcrud

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish_docs.yml  run_tests.yml
demo/: setup_schema.sql
docs/: index.md
docs/getting-started/: create.md  cursor.md  delete.md  demo-schema.md  get-one-method.md  index.md  read.md  update.md
getting-started/: index.html
getting-started/create/: index.html
getting-started/cursor/: index.html
getting-started/delete/: index.html
getting-started/demo-schema/: index.html
getting-started/get-one-method/: index.html
getting-started/read/: index.html
getting-started/update/: index.html
pgcrud/: __init__.py  _c.py  _col.py  _star.py  _t.py  _tab.py  _undefined.py  c.py  clauses.py  col.py  col_generator.py  config.py  constants.py  custom_row_factories.py  expr.py  expr_generator.py  expressions.py  filter_conditions.py  frame_boundaries.py  fun.py  function_bearer.py  functions.py  optional_dependencies.py  query.py  query_builder.py  t.py  tab.py  tab_generator.py  types.py  undefined.py  utils.py  win.py  win_generator.py
pgcrud/_operations/: delete_many.py  delete_many_async.py  execute.py  execute_async.py  execute_many.py  execute_many_async.py  get_many.py  get_many_async.py  get_one.py  get_one_async.py  insert_many.py  insert_many_async.py  insert_one.py  type_hints.py  (+4 more)
search/: search_index.json
tests/: conftest.py  models.py  setup_schema.sql  test_expr.py  test_expr_generator.py  test_expressions.py  test_get_one.py
(+70 files in other folders)
