[project]
name = "pgcrud"
version = "0.1.0"
description = "Create, Read, Update, and Delete (CRUD) operations for PostgreSQL, made simple and fast."
authors = [{name = "Danijel Kivaranovic", email = "danijel@kivaranovic.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
]
