[project]
name = "pgcrud"
version = "0.1.0"
description = "Create, Read, Update, and Delete (CRUD) operations for PostgreSQL made simple and fast."
authors = [{name = "Danijel Kivaranovic", email = "danijel@kivaranovic.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.18.6",
    "psycopg[binary,pool]>=3.2.3",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.10.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
